--- a/css/app.css
+++ b/css/app.css
@@ -17,6 +17,10 @@ body {
     flex-direction: column;
 }
 
+a {
+    text-decoration: none;
+}
+
 .container {
     max-width: 900px;
     margin: 0 auto;
@@ -37,7 +41,7 @@ body {
 /* header */
 .page-header {
     padding: 10px;
-    background-color: #3161e0;
+    background-color: #265ee9;
 }
 
 .page-menu {
@@ -52,11 +56,19 @@ body {
 
 /* hero section */
 .hero-section {
+    background-color: #265ee9;
     background-image: url(../img/jumbo.png);
+    color: white;
+    text-align: center;
 }
 
 .hero-section .row {
     justify-content: center;
+    align-items: center;
+}
+
+.hero-buttons {
+    padding: 50px 20px;
 }
 
 /* main */
@@ -75,19 +87,42 @@ section {
 }
  
 
-/* button */
-.white-button {
+.button {
     background-color: white;
+    color: #23272a;
     border-radius: 50px;
-    padding: 7px 15px;
+    padding: 10px 20px;
+    font-size: 18px;
 }
+
+p {
+    font-size: 16px;
+    line-height: 26px;
+    padding: 10px 0;
+
+}
+
+/* typogtraphy */
+.bt-12 {
+    font-size: 12px;
+}
+
+.bt-14 {
+    font-size: 14px;
+}
+
+.ht-68 {
+    font-size: 68px;
+    font-weight: 700;
+    padding: 30px 0;
+}
+
 
 
 /* columns & bg-sections */
 .col-10 {
-    flex-basis: calc((100% / 12) * 100);
+    flex-basis: calc((100% / 12) * 10);
 }
-
 
 .col-25 {
     flex-basis: 25%;
@@ -123,17 +158,9 @@ section {
 
 .dgrey-bg {
     background-color: #23272a;
+    color: white;
 }
 
-
-/* typogtraphy */
-.bt-12 {
-    font-size: 12px;
-}
-
-.bt-14 {
-    font-size: 14px;
-}
 
 
 
