--- a/css/app.css
+++ b/css/app.css
@@ -111,15 +111,31 @@ p {
     font-size: 14px;
 }
 
-.ht-68 {
-    font-size: 68px;
+.ht-48 {
+    font-size: 48px;
     font-weight: 700;
     padding: 30px 0;
+}
+
+.ht-34 {
+    font-size: 34px;
+    font-weight: 700;
 }
 
 
 
 /* columns & bg-sections */
+.col-4 {
+	flex-basis: calc((100% / 12) * 4);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.col-8 {
+	flex-basis: calc((100% / 12) * 8);
+}
+
 .col-10 {
     flex-basis: calc((100% / 12) * 10);
 }
@@ -130,14 +146,6 @@ p {
 
 .col-30 {
     flex-basis: 30%;
-}
-
-.col-35 {
-    flex-basis: 35%;
-}
-
-.col-65 {
-    flex-basis: 65%;
 }
 
 .col-70 {
