--- a/css/app.css
+++ b/css/app.css
@@ -34,6 +34,10 @@ a {
 	justify-content: space-between;
 }
 
+.justify-center {
+    justify-content: center;
+}
+
 .align-center {
     align-items: center;
 }
@@ -125,11 +129,14 @@ p {
 
 
 /* columns & bg-sections */
+.col-2 {
+	flex-basis: calc((100% / 12) * 2);
+}
+
 .col-4 {
 	flex-basis: calc((100% / 12) * 4);
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 
 .col-8 {
@@ -140,21 +147,6 @@ p {
     flex-basis: calc((100% / 12) * 10);
 }
 
-.col-25 {
-    flex-basis: 25%;
-}
-
-.col-30 {
-    flex-basis: 30%;
-}
-
-.col-70 {
-    flex-basis: 70%;
-}
-
-.col-100 {
-    flex-basis: 100%;
-}
 
 .reverse {
     flex-direction: row-reverse;
